--- a/tests/TestContainersPackage/TestContainersPackage.csproj
+++ b/tests/TestContainersPackage/TestContainersPackage.csproj
@@ -12,11 +12,13 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.0"/>
+        <PackageReference Include="Npgsql" Version="8.0.2" />
         <PackageReference Include="NUnit" Version="3.13.3"/>
         <PackageReference Include="NUnit3TestAdapter" Version="4.2.1"/>
         <PackageReference Include="NUnit.Analyzers" Version="3.6.1"/>
         <PackageReference Include="coverlet.collector" Version="6.0.0"/>
         <PackageReference Include="Testcontainers" Version="3.7.0" />
+        <PackageReference Include="Testcontainers.PostgreSql" Version="3.7.0" />
     </ItemGroup>
 
 </Project>
