Create test .proto and connect gRPC servcer with client.

--- a/src/gRPC.AirClient/gRPC.AirClient.csproj
+++ b/src/gRPC.AirClient/gRPC.AirClient.csproj
@@ -6,4 +6,8 @@
         <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Grpc.AspNetCore" Version="2.61.0" />
+    </ItemGroup>
+
 </Project>
