--- a/src/gRPC.AirStation/gRPC.AirStation.csproj
+++ b/src/gRPC.AirStation/gRPC.AirStation.csproj
@@ -7,4 +7,13 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Grpc.AspNetCore" Version="2.61.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <Protobuf Include="contract.proto" />
+    </ItemGroup>
+
+    
 </Project>
