Define airQ .protos for data producent (Station) and consumers (Clients)

--- a/src/gRPC.AirServer/gRPC.AirServer.csproj
+++ b/src/gRPC.AirServer/gRPC.AirServer.csproj
@@ -13,6 +13,22 @@
     </ItemGroup>
     
     <ItemGroup>
+        <Protobuf Include="Proto\consumer.proto">
+          <GrpcServices>Both</GrpcServices>
+          <Access>Public</Access>
+          <ProtoCompile>True</ProtoCompile>
+          <CompileOutputs>True</CompileOutputs>
+          <OutputDir>obj\Debug\net7.0\</OutputDir>
+          <Generator>MSBuild:Compile</Generator>
+        </Protobuf>
         <Protobuf Include="Proto\contract.proto" />
+        <Protobuf Include="Proto\producer.proto">
+          <GrpcServices>Both</GrpcServices>
+          <Access>Public</Access>
+          <ProtoCompile>True</ProtoCompile>
+          <CompileOutputs>True</CompileOutputs>
+          <OutputDir>obj\Debug\net7.0\</OutputDir>
+          <Generator>MSBuild:Compile</Generator>
+        </Protobuf>
     </ItemGroup>
 </Project>
