Start implementing .proto in AirClient - there is a bug - Blazor component is disposed.

--- a/src/gRPC.AirClient/gRPC.AirClient.csproj
+++ b/src/gRPC.AirClient/gRPC.AirClient.csproj
@@ -10,4 +10,10 @@
       <PackageReference Include="Grpc.AspNetCore" Version="2.61.0" />
     </ItemGroup>
 
+    <ItemGroup>
+        <Protobuf Include="..\gRPC.AirServer\Proto\consumer.proto" GrpcService="client">
+            <Link>consumer.proto</Link>
+        </Protobuf>
+    </ItemGroup>
+    
 </Project>
