--- a/src/gRPC.AirClient/gRPC.AirClient.csproj
+++ b/src/gRPC.AirClient/gRPC.AirClient.csproj
@@ -13,6 +13,13 @@
     <ItemGroup>
         <Protobuf Include="..\gRPC.AirServer\Proto\consumer.proto" GrpcService="client">
             <Link>consumer.proto</Link>
+
+            <GrpcServices>Client</GrpcServices>
+            <Access>Public</Access>
+            <ProtoCompile>True</ProtoCompile>
+            <CompileOutputs>True</CompileOutputs>
+            <OutputDir>obj\Debug\net7.0\</OutputDir>
+            <Generator>MSBuild:Compile</Generator>
         </Protobuf>
     </ItemGroup>
     
