--- a/src/gRPC.AirStation/gRPC.AirStation.csproj
+++ b/src/gRPC.AirStation/gRPC.AirStation.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFramework>net7.0</TargetFramework>
+        <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
@@ -14,12 +14,14 @@
     <ItemGroup>
         <Protobuf Include="..\gRPC.AirServer\Proto\contract.proto">
             <Link>contract.proto</Link>
+            <GrpcServices>Client</GrpcServices>
         </Protobuf>
     </ItemGroup>
     
     <ItemGroup>
       <Protobuf Include="..\gRPC.AirServer\Proto\producer.proto">
-        <Link>producer.proto</Link>
+          <Link>producer.proto</Link>
+          <GrpcServices>Client</GrpcServices>
       </Protobuf>
     </ItemGroup>
     
