--- a/src/gRPC.AirServer/gRPC.AirServer.csproj
+++ b/src/gRPC.AirServer/gRPC.AirServer.csproj
@@ -10,6 +10,7 @@
 
     <ItemGroup>
       <PackageReference Include="Grpc.AspNetCore" Version="2.61.0" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Core" Version="8.0.3" />
     </ItemGroup>
     
     <ItemGroup>
