--- a/src/gRPC.AirServer/gRPC.AirServer.csproj
+++ b/src/gRPC.AirServer/gRPC.AirServer.csproj
@@ -10,6 +10,11 @@
 
     <ItemGroup>
       <PackageReference Include="Grpc.AspNetCore" Version="2.61.0" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.3">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.3" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Core" Version="8.0.3" />
     </ItemGroup>
     
