--- a/tests/BlazorEventBusTests/BlazorEventBus.UnitTests/BlazorEventBus.UnitTests.csproj
+++ b/tests/BlazorEventBusTests/BlazorEventBus.UnitTests/BlazorEventBus.UnitTests.csproj
@@ -10,11 +10,16 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.0"/>
         <PackageReference Include="NUnit" Version="3.13.3"/>
         <PackageReference Include="NUnit3TestAdapter" Version="4.2.1"/>
         <PackageReference Include="NUnit.Analyzers" Version="3.6.1"/>
         <PackageReference Include="coverlet.collector" Version="6.0.0"/>
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\..\..\src\BlazorEventBus\BlazorEventBus\BlazorEventBus.csproj" />
     </ItemGroup>
 
 </Project>
