--- a/src/BlazorEventBus/BlazorEventBus/BlazorEventBus.csproj
+++ b/src/BlazorEventBus/BlazorEventBus/BlazorEventBus.csproj
@@ -17,6 +17,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="JetBrains.Annotations" Version="2023.3.0" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
     </ItemGroup>
     
